# dc-mailer

./: .env.example.toml  .gitignore  DEV_NOTES.md  README.md  emailer.py  pyproject.toml  requirements.txt
dc_emailer/: __init__.py  emailer.py
email_alert/: emailer.py
tests/: test_emailer.py
