[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emailer"
version = "0.1.0"
description = "A simple email sending module for Python projects"
authors = [{name = "Denise Case", email = "denisecase@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["emailer"]

[project.urls]
"Homepage" = "https://github.com/denisecase/email-alert"
"Repository" = "https://github.com/denisecase/email-alert"
